Fix #30977: error loading modal keymaps from keyconfiguration presets.